<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_theme"
   >
    <View
        android:id="@+id/fake_status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusbar_view_height"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fake_status_bar"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_first"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ll_customer_selector"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/find_shop"
            app:layout_constraintBottom_toBottomOf="@id/iv_shop"
            app:layout_constraintLeft_toRightOf="@id/iv_shop"
            app:layout_constraintTop_toTopOf="@id/iv_shop" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_go"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_shop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_shop" />

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:background="@color/bg_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_name1"
            app:layout_constraintStart_toStartOf="@+id/tv_name1"
            app:layout_constraintTop_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_second"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ll_customer_selector"
        app:layout_constraintTop_toBottomOf="@+id/cl_first">

        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/find_game"
            app:layout_constraintBottom_toBottomOf="@id/iv_game"
            app:layout_constraintLeft_toRightOf="@id/iv_game"
            app:layout_constraintTop_toTopOf="@id/iv_game" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_go"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_game"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_game" />

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:background="@color/bg_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_name2"
            app:layout_constraintStart_toStartOf="@+id/tv_name2"
            app:layout_constraintTop_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/tv_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/go_set"
        android:textColor="@color/bg_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>